--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -107,7 +107,7 @@
                                     <label class="control-label col-xs-4" for="paymentNotes" >Note:
                                     </label>
                                     <div class="input-group col-xs-7"  >
-                                        <textarea id="paymentNotes" name="paymentNotes" class="greenBorder form-control" maxlength="1000" rows="3" readonly placeholder="Notes" style="height:auto; resize:none">
+                                        <textarea id="paymentNotes" name="paymentNotes" class="greenBorder form-control" maxlength="1000" rows="3" readonly placeholder="Notes">
                                         </textarea>
 
                                     </div>
