close Stripe handler to prevent it memorize card info

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -468,8 +468,15 @@
                       allowRememberMe: false,
                       panelLabel: 'Checkout',
                       token: token
+                      //allow-remember-me:false
                   });
                   $('#cancelModal').click();
+
+                  $(window).on('popstate', function() {
+
+                      alert("handler closed");
+                      StripeCheckout.close();
+                  });
               }
               <% } %>
           });
