fix charity edit page problem

--- a/views/charity/charityEdit.ejs
+++ b/views/charity/charityEdit.ejs
@@ -10,6 +10,7 @@
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
 
     <style>
         body{
@@ -44,7 +45,7 @@
 
 <body>
 <!-- wrapper-->
-<div class="container" style="min-height: 70%; width:60%">
+<div class="container" style="min-height: 70%; width:60%; padding-top: 5%">
 
 <div id="main" class="container-fluid" >
 <h2 class="text-center">Edit My Page</h2>
@@ -241,7 +242,7 @@
                     </textarea>
                 </div>
                 <div style="padding-bottom: 1%">&nbsp;</div>
-                <button id="submitEditMyPageFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Save</button>
+                <button id="submitEditMyPageFormButton" class="btn btn-lg btn-primary btn-block greenButton" type="submit" >Save</button>
                 <div style="padding-bottom: 2%">&nbsp;</div>
 
             </form>
@@ -266,7 +267,7 @@
                 <input type="hidden" name="MAX_FILE_SIZE" value="1024" />
                 <input type="file" id="recipientProfileInput" name="recipientProfile" accept="image/*" >
                 <div style="float: left">File size max 1M</div><br>
-                <button id="submitProfileIconUploadFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Upload Profile Picture</button>
+                <button id="submitProfileIconUploadFormButton" class="btn btn-lg btn-primary btn-block greenButton" type="submit" >Upload Profile Picture</button>
             </form>
             <div style="padding-bottom: 1%"> &nbsp</div>
         </div>
@@ -313,7 +314,7 @@
                     </div>
                 </div>
                 <div style="padding-top: 1%; padding-bottom: 2%;">
-                    <button id="submitUpdateProfilePasswordButton" class="btn btn-lg btn-primary btn-block" type="submit" >Change Password</button>
+                    <button id="submitUpdateProfilePasswordButton" class="btn btn-lg btn-primary btn-block greenButton" type="submit" >Change Password</button>
                 </div>
             </form>
         </div>
