--- a/views/charity/charityListTemplate.ejs
+++ b/views/charity/charityListTemplate.ejs
@@ -1,4 +1,7 @@
 <script>
+    var itemsOnPage = 10;
+    var currentItem = 0;
+
     var defaultHTML =
         ' <div  class="col-xs-11" style="border: 2px solid; border-color: #78DC96;background: #ffffff;border-radius: 10px; margin-top: 1%; margin-bottom: 1%"> ' +
         '   <div class="col-xs-4" style="margin-top: 1%;margin-bottom: 1%"> ' +
