--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -82,7 +82,7 @@
 
         <div class="container" id="exampleNavbarCollapse">
             <ul class="nav navbar-nav">
-                <li><a href="/" style="padding-top:10px"><img src="/images/testLogo.png" /></a></li>
+                <li><a href="/" style="padding-top:10px"><img height="30px" width="70px" src="/images/icon_big.png" /></a></li>
            <!--     <li ><a href="/charities/listCharities">Charities</a></li> -->
              <li>
                  <form class="nav navbar-nav navbar-form " action="/charities/searchCharities" method="get" role="search">
@@ -100,8 +100,8 @@
 
             <ul class="nav navbar-nav navbar-right" style="padding-right:5px;padding-top: 0px ! important">
                 <li ><a href="/charities/listCharities" style="padding-top:15px; color:black">Charities</a></li>
-                <li class="<%=menuClass[3]%>"><a href="/login/signin"><img src="/images/login.png" /></a></li>
-                <li class="<%=menuClass[4]%>"><a href="/login/signup"><img src="/images/join.png" /></a></li>
+                <li class="<%=menuClass[3]%>"><a href="/login/signin"><img height="30px" width="30px" src="/images/login.jpeg" />LOGIN</a></li>
+                <li class="<%=menuClass[4]%>"><a href="/login/signup"><img height="30px" width="30px" src="/images/signup.jpeg" />SIGNUP</a></li>
             </ul>
             <% } else if( 'recipient' != user.provider ){ %>
             <ul class="nav navbar-nav navbar-right"  style="padding-right:15px;padding-top: 0px ! important">
