fix comfirmation code on jump

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -417,7 +417,10 @@
                               rememberMe: false
                           }
                   ).done(function (msg) {
-                              window.location.href = '/confirmation';
+
+
+
+                              window.location.href="/confirmation?code=" + JSON.parse(msg).confirmationCode;
                           })
                           .fail(function (xhr, textStatus, errorThrown) {
                               //TODO change to error message
