Update AboutUs page

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -15,19 +15,15 @@
 <body>
 <div class="container" style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px;">
     <div class="row text-center">
-        <div class="col-md-12"><h2  style="margin:0;"><b>About</b></h2></div>
+        <div class="col-md-12"><h2  style="margin:0;"><b>About Us</b></h2></div>
     </div>
     <hr class="greenLine">
     <div class="row text-center">
-        <div class="col-md-6">
-            <img alt="about-us-page" src="images/launch_icon.png" />
-
-        </div>
-        <div class="col-md-6">
-            <p>           
+        <div class="col-md-12">
+            <p><font style='font-size:40px;font-family:Algerian;font-color:black;font-style:bold;'>
 	Our vision -- Extend love, offer appreciation and inspire change to the world</P>
            <P> Our mission is to create a top-notch service that delights the giving back to community experience.
-            </p>
+            </p></font>
         </div>
     </div>
 </div>
