--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,4 @@
-﻿<footer style="background: #f0f0f0;padding-top: 10px">
+<footer style="background: #f0f0f0;padding-top: 10px">
     <style>
         ul {
             display: block;
@@ -15,7 +15,7 @@
         }
 
         footer .col-md-3 {
-            width: 12.5%;
+            width: 15%;
 
         }
 
@@ -61,7 +61,8 @@
                         <li class="#"><a href="/search">Donation Tracking</a></li>
                     </ul>
                 </div>
-                <div style="float: right"> <img src="/images/footerLogo.png"/></div>
+                <div style="width: 40%;float:right;"><img style="opacity:1.0;max-width:610px;max-height: 129px" src='/images/footerLogo.png'>
+                </div>
             </div>
         </div>
 
