--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
 <!-- first section - Home -->
 <div id="home" class="home">
     <div class="text-vcenter">
-        <h1 style="font-family: cursive; font-style: normal ">WILL GIVE</h1>
+        <h1 style="font-family: Brush Script MT; font-size:80px;font-style: normal ">WILL GIVE</h1>
 
 
     </div>
