Some cosmetics fixes. Align footer to the bottom in most cases.

--- a/views/charity/charityEdit.ejs
+++ b/views/charity/charityEdit.ejs
@@ -269,7 +269,7 @@
                 <div style="float: left">File size max 1M</div><br>
                 <button id="submitProfileIconUploadFormButton" class="btn btn-lg btn-primary btn-block greenButton" type="submit" >Upload Profile Picture</button>
             </form>
-            <div style="padding-bottom: 1%"> &nbsp</div>
+            <div style="padding-bottom: 1%"> &nbsp;</div>
         </div>
         <h3>Password</h3>
         </hr>
