--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -18,7 +18,7 @@
     <%include layout/navbar.ejs%>
 </head>
 <body>
-<div class="container" style="padding-top: 5%">
+<div class="container" style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px;">
     <div class="col-md-7 columns">
 
 
