--- a/views/login/userSettings.ejs
+++ b/views/login/userSettings.ejs
@@ -14,7 +14,7 @@
 <body>
     <%activeMenu = "SignUp"%>
     <%include ../layout/navbar.ejs%>
-<div class="container sidebar-content" style="height:auto; min-height: 90%; padding-top: 5%">
+<div class="container sidebar-content" style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px;">
     <div class="row row-offcanvas row-offcanvas-left">
 
         <!-- sidebar -->
