--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -5,7 +5,7 @@
             list-style-type: none;
         }
         footer a{
-            color: white;
+            color: #808080;;
             text-decoration: none;
 
         }
@@ -18,8 +18,6 @@
             width: 15%;
 
         }
-
-        footer a {color:#808080;}
     </style>
 
         <div class="container" style="padding-bottom: 10px">
