--- a/views/login/forgotPassword.ejs
+++ b/views/login/forgotPassword.ejs
@@ -15,7 +15,7 @@
 <body>
     <%include ../layout/navbar.ejs%>
 
-<div class="container" style="padding-top: 5%;min-height: 50%; max-width: 40%">
+<div class="container" style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px; max-width: 40%">
     <div >
         <h3>WillGive Password Reset</h3>
     </div>
