--- a/views/login/resetPassword.ejs
+++ b/views/login/resetPassword.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <%include ../layout/navbar.ejs%>
-<div class="container" style="padding-top: 5%;min-height: 50%; max-width: 40%">
+<div class="container" style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px; max-width: 40%">
     <div >
         <h3>WillGive Password Reset</h3>
     </div>
