--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en" ng-app="willGiveApp" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
@@ -7,16 +6,18 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
-    <link rel="stylesheet" href="/assets/css/colorStyle.css">
+    <link rel="stylesheet" href="/assets/css/colorStyle.css" >
 
 </head>
-<body style="background: #f0f0f0;">
+<body style="">
     <%activeMenu = "SignIn"%>
     <%include ../layout/navbar.ejs%>
-<div class="container" style="background: #ffffff; height:auto; min-height: 90%; margin: 0 auto -80px; padding-top: 5%">
+<div style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px">
+<div class="container" >
     <h2 class="form-signin-heading text-center " style="font-family : Nevis">WillGive Login</h2>
     <hr class="greenLine" >
-    <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 10px">
+    <div class="form-signin col-xs-4 col-xs-offset-1" style="padding-top: 10px">
+      <form id="userSignInForm"  action="/services/login/signin" method="post">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
           <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
@@ -28,7 +29,7 @@
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" name="username" class="greenBorder form-control" placeholder="Email address" required autofocus>
         </div>
-        <div style="padding-top: 2px"> &nbsp</div>
+        <div style="padding-top: 2px"> &nbsp;</div>
 
         <div class="input-group input-group-lg">
               <span class="input-group-addon greenBorder">
@@ -39,19 +40,20 @@
         </div>
 
 
-        <div style="padding-bottom: 20px">&nbsp</div>
+        <div style="padding-bottom: 20px">&nbsp;</div>
         <button class="btn btn-lg btn-primary btn-block greenButton" type="submit" >SIGN IN</button>
 
         <ul class="text-center" style="padding-top: 20px; padding-right: 40px">
              <a class="link" href="/login/forgotPassword">Forgot your password?</a>
         </ul>
     </form>
+    </div>
     <div class="col-xs-2 text-center">
         &nbsp;<span style="vertical-align:-50px;"><h1>or</h1></span>
     </div>
     <div class="col-xs-5" style="padding-top: 50px; padding-bottom: 100px;">
         <a href="/auth/facebook" ><button class="btn btn-lg btn-facebook"><i class="fa fa-facebook "></i>f | Sign in with Facebook</button></a>
-		<P>
+	<P/>
         <ul class="secondary note nobullet">
             <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Privacy:</span> we keep it private</li>
             <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Protection:</span> share only with permission</li>
@@ -63,6 +65,7 @@
     <div class="text-center">
         Don't have an account? <a href="/login/signup">Sign Up</a>
     </div>
+</div>
 </div>
 <%include ../layout/footer.ejs%>
 <script src="/jquery/dist/jquery.min.js"></script>
