--- a/views/recipientLogin/recipientLogin.ejs
+++ b/views/recipientLogin/recipientLogin.ejs
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en" ng-app="willGiveApp" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
@@ -16,10 +15,11 @@
 </head>
 <body>
 
-<div class="container" style="width: 40%;padding-top: 5%; height:auto; min-height: 90%; margin: 0 auto -80px;">
+<div style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px">
+<div class="container" style="max-width:50%;">
     <h2 class="form-signin-heading text-center">WillGive Charity Login</h2>
     <hr class="greenLine">
-    <form id="recipientSignInForm" class="form-signin col-xs-12" action="/services/recipient/login" method="post" style="padding-top: 2%">
+    <form id="recipientSignInForm" class="form-signin col-xs-8" action="/services/recipient/login" method="post" style="padding-top: 2%">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
         <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
@@ -31,7 +31,7 @@
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" name="username" class="greenBorder form-control" placeholder="Email address" required autofocus>
         </div>
-        <div style="padding-top: 2px"> &nbsp</div>
+        <div style="padding-top: 2px"> &nbsp;</div>
 
         <div class="input-group input-group-lg">
               <span class="input-group-addon greenBorder">
@@ -41,7 +41,7 @@
             <input type="password" id="inputPassword" name="password" class="greenBorder form-control" placeholder="Password" minlength="8" required>
         </div>
 
-        <div style="padding-bottom: 20px">&nbsp</div>
+        <div style="padding-bottom: 20px">&nbsp;</div>
         <button class="btn btn-lg btn-primary btn-block greenButton" type="submit" >SIGN IN</button>
 
         <ul class="text-center" style="padding-top: 20px; padding-right: 40px">
@@ -56,9 +56,8 @@
     <div class="text-center">
     </div>
 </div>
+</div>
 <%include ../layout/footer.ejs%>
-
-
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/angular/angular.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
