--- a/views/recipientLogin/recipientSignUp.ejs
+++ b/views/recipientLogin/recipientSignUp.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<div class="container" style="padding-top:5%;min-height: 70%; width:40%">
+<div class="container" style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px; width:40%">
     <div class="row">
         <h2 class="form-signin-heading text-center">Charity SignUp</h2>
         <hr class="greenLine">
@@ -218,7 +218,7 @@
 
                 </textarea>
             </div>
-            <div style="padding-bottom: 1%"> &nbsp</div>
+            <div style="padding-bottom: 1%"> &nbsp;</div>
 
             <button id="recipientSignupFormButton" class="btn btn-lg btn-primary btn-block greenButton"  type="submit" >SignUp And Next</button>
     </form>
