--- a/views/recipientLogin/recipientSignUp2_upload.ejs
+++ b/views/recipientLogin/recipientSignUp2_upload.ejs
@@ -28,7 +28,7 @@
         <div style="float: left">File size max 1M</div><br>
         <button id="submitProfileIconUploadFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Upload</button>
     </form>
-    <div style="padding-bottom: 1%"> &nbsp</div>
+    <div style="padding-bottom: 1%"> &nbsp;</div>
     <form style="display: none" action="/services/recipient/profileVideoUrlUpload" id="profileVideoUrlUploadFrom" method="post" enctype="multipart/form-data" onsubmit="">
         <label for="signupVideoUrl" class="">Or paste a YouTube link here</label>
         <input type="text" id="signupVideoUrl" name="signupVideoUrl" class="greenBorder form-control" placeholder="http://">
